task 1 dockerfile done

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,8 @@ FROM ubuntu:18.04
 
 RUN apt update && apt install -y toilet
 
-ENTRYPOINT "toilet", "-F", "border", "--gay"
+ENTRYPOINT ["toilet", "-F", "border", "--gay"]
 
-CMD "Big Test"
+CMD ["Hello World"]
 
 
