--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
+    networks:
+      - network1
 
 # define the networks
 networks:
